updates to html and css

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         <h1>Texas Labor Data</h1>
         <p class='lead'>We will use Web Scraping to pull data from BLS on employment by sector
           in each of Texas’ 25 metropolitan areas as identified by the BLS. The data will
-          be stored on either an SQL or NoSQL database, and analyzed using Python, including the Pandas library.</p>
+          be stored on either an SQL or MySQL database, and analyzed using Python, including the Pandas library.</p>
       </div>
 
       <div class="row">
