--- a/index.html
+++ b/index.html
@@ -6,11 +6,21 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title class="featurette-heading">Texas Labor Data</title>
+
+  <!-- Leaflet JS & CSS -->
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
   <link rel="stylesheet" type="text/css" href="styles.css">
-   <!-- Leaflet-Choropleth JavaScript -->
-   <script type="text/javascript" src="choropleth.js"></script>
-   
+  <link rel="stylesheet" href="https://unpkg.com/leaflet@1.3.3/dist/leaflet.css"
+    integrity="sha512-Rksm5RenBEKSKFjgI3a41vrjkw4EVPlJ3+OiI65vTjIdo9brlAacEuKOiQ5OFh7cOI1bkDwLqdLw3Zg0cRJAAQ=="
+    crossorigin="" />
+
+  <script src="https://unpkg.com/leaflet@1.3.3/dist/leaflet.js"
+    integrity="sha512-tAGcCfR4Sc5ZP5ZoVz0quoZDYX5aCtEm/eu1KhSLj2c9eFrylXZknQYmxUssFaVJKvvc0dJQixhGjG2yXWiV9Q=="
+    crossorigin=""></script>
+
+  <!-- d3 JavaScript -->
+  <script src="https://d3js.org/d3.v4.min.js"></script>
+
 </head>
 
 <body>
@@ -22,18 +32,34 @@
         <p class='lead'>We will use Web Scraping to pull data from BLS on employment by sector
           in each of Texas’ 25 metropolitan areas as identified by the BLS. The data will
           be stored on either an SQL or MySQL database, and analyzed using Python, including the Pandas library.</p>
+          <br>
+          <br>
+          <h2>Major Cities Job Markets</h2>
+          <p class= 'lead'>Different job categories have led in different regions of our diverse state:
+            Houston’s job growth driven most by mining and manufacturing;
+            San Antonio’s by mining and construction;
+            Austin’s by financial services and manufacturing;
+            and Dallas-Fort Worth’s by mining, leisure and hospitality, and professional business services</p>
       </div>
 
+      <!-- Section for Major cities description -->
       <div class="row">
         <div class="col-lg-3">
           <img class="rounded-circle" src="Houston-Skyline.jpg" alt="Generic placeholder image" width="140"
             height="140">
           <h2>Houston</h2>
-          <p>Donec sed odio dui. Etiam porta sem malesuada magna mollis euismod. Nullam id dolor id nibh ultricies
-            vehicula ut id elit. Morbi leo risus, porta ac consectetur ac, vestibulum at eros. Praesent commodo cursus
-            magna.</p>
+          <p>Job growth for Houston has increased by 2.8%; adding more than
+            86,200 jobs to from last year. Engineering and service related jobs
+            increased by 9.5% and business service related jobs increased by 4.6%
+            over the past year. However, the most significant growth has been within
+            the manufacturing industry. Manufacturing job growth contributed 14,900
+            jobs within the past year; making this the 21st consecutive month for annual
+            job growth.
+          </p>
           <p><a class="btn btn-secondary" href="#" role="button">View details »</a></p>
         </div><!-- /.col-lg-3 -->
+
+
         <div class="col-lg-3">
           <img class="rounded-circle" src="San Antonio -Skyline.jpg" alt="Generic placeholder image" width="140"
             height="140">
@@ -43,6 +69,8 @@
             condimentum nibh.</p>
           <p><a class="btn btn-secondary" href="#" role="button">View details »</a></p>
         </div><!-- /.col-lg-3 -->
+
+
         <div class="col-lg-3">
           <img class="rounded-circle" src="Austin-Skyline.jpg" alt="Generic placeholder image" width="140" height="140">
           <h2>Austin</h2>
@@ -51,6 +79,8 @@
             massa justo sit amet risus.</p>
           <p><a class="btn btn-secondary" href="#" role="button">View details »</a></p>
         </div><!-- /.col-lg-3 -->
+
+
         <div class="col-lg-3">
           <img class="rounded-circle" src="Dallas-Skyline.jpg" alt="Generic placeholder image" width="140" height="140">
           <h2>Dallas</h2>
@@ -61,22 +91,30 @@
         </div><!-- /.col-lg-3 -->
       </div>
 
+      <!-- Section for Leaflet maps and d3 maps -->
       <div class="row featurette">
         <div class="col-md-5">
           <h2 class="featurette-heading">Labor Color Map </h2>
-          <p class="lead">The color based map represents the 25 metropolitan regions within the state of Texas</p>
+          <p class="lead">The color based map represents the 25 metropolitan
+            regions within the state of Texas. In addition, there are 6 rural
+            regions represented in the color map. Each of the regions are represented
+            by different colors. All 31 regions are represented within the 3 year
+            labor statistics retrived from US Bureau of Labor Statistics for the state
+            of Texas</p>
         </div>
-        <div class= "col-md-7" id="map"></div>
-        <script type="text/javascript" src="choropleth.js"></script>
-        <script type="text/javascript" src="choropleth.js"></script>
+        <!-- leaflet map -->
+        <div class="col-md-7" id="map"></div>
+        <!-- API key -->
+        <script type="text/javascript" src="config.js"></script>
+        <script type="text/javascript" src="logic.js"></script>
       </div>
+    </div>
 
 
-
-      <!-- <script src="https://cdn.plot.ly/plotly-1.31.2.min.js"></script> -->
-      <script src="https://cdnjs.cloudflare.com/ajax/libs/d3/5.5.0/d3.js"></script>
-      <script src="https://cdn.plot.ly/plotly-latest.min.js"></script>
-      <script src="choropleth.js"></script>
+    <!-- <script src="https://cdn.plot.ly/plotly-1.31.2.min.js"></script> -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/d3/5.5.0/d3.js"></script>
+    <script src="https://cdn.plot.ly/plotly-latest.min.js"></script>
+    <!-- <script src="choropleth.js"></script> -->
 
 </body>
 
