updates to html file

--- a/index.html
+++ b/index.html
@@ -32,14 +32,14 @@
         <p class='lead'>We will use Web Scraping to pull data from BLS on employment by sector
           in each of Texas’ 25 metropolitan areas as identified by the BLS. The data will
           be stored on either an SQL or MySQL database, and analyzed using Python, including the Pandas library.</p>
-          <br>
-          <br>
-          <h2>Major Cities Job Markets</h2>
-          <p class= 'lead'>Different job categories have led in different regions of our diverse state:
-            Houston’s job growth driven most by mining and manufacturing;
-            San Antonio’s by mining and construction;
-            Austin’s by financial services and manufacturing;
-            and Dallas-Fort Worth’s by mining, leisure and hospitality, and professional business services</p>
+        <br>
+        <br>
+        <h2>Major Cities Job Markets</h2>
+        <p class='lead'>Different job categories have led in different regions of our diverse state:
+          Houston’s job growth driven most by mining and manufacturing;
+          San Antonio’s by mining and construction;
+          Austin’s by financial services and manufacturing;
+          and Dallas-Fort Worth’s by mining, leisure and hospitality, and professional business services</p>
       </div>
 
       <!-- Section for Major cities description -->
@@ -74,9 +74,11 @@
         <div class="col-lg-3">
           <img class="rounded-circle" src="Austin-Skyline.jpg" alt="Generic placeholder image" width="140" height="140">
           <h2>Austin</h2>
-          <p>Donec sed odio dui. Cras justo odio, dapibus ac facilisis in, egestas eget quam. Vestibulum id ligula porta
-            felis euismod semper. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum
-            massa justo sit amet risus.</p>
+          <p>Job growth for Austin has increased by 2.1%; adding more than
+            22,700 jobs to from last year. Based on last years' job growth, Austin
+            has became the 16th fastest growing major metropolitan city. Wholesale trade
+            grew by 8.2% making it the fastest growing industry. However, professional
+            and business services added the most 6,000 jobs sparking the greatest increase in job growth.</p>
           <p><a class="btn btn-secondary" href="#" role="button">View details »</a></p>
         </div><!-- /.col-lg-3 -->
 
@@ -84,9 +86,11 @@
         <div class="col-lg-3">
           <img class="rounded-circle" src="Dallas-Skyline.jpg" alt="Generic placeholder image" width="140" height="140">
           <h2>Dallas</h2>
-          <p>Donec sed odio dui. Cras justo odio, dapibus ac facilisis in, egestas eget quam. Vestibulum id ligula porta
-            felis euismod semper. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum
-            massa justo sit amet risus.</p>
+          <p>Job growth for Dallas has increased by 3.3%; adding more than
+            84,900 jobs to from last year. Professional and business service
+            related job grew by 3.8% over the past year. The industry with the
+            greatest increase in job growth was lesiure and hospitality; which added
+            18,800 jobs.</p>
           <p><a class="btn btn-secondary" href="#" role="button">View details »</a></p>
         </div><!-- /.col-lg-3 -->
       </div>
