updates to html

--- a/index.html
+++ b/index.html
@@ -64,9 +64,12 @@
           <img class="rounded-circle" src="San Antonio -Skyline.jpg" alt="Generic placeholder image" width="140"
             height="140">
           <h2>San Antonio</h2>
-          <p>Duis mollis, est non commodo luctus, nisi erat porttitor ligula, eget lacinia odio sem nec elit. Cras
-            mattis consectetur purus sit amet fermentum. Fusce dapibus, tellus ac cursus commodo, tortor mauris
-            condimentum nibh.</p>
+          <p>Job growth for San Antonio has dropped to 1.4% from last year, in comparison to 2.0% from
+            the previous year. However, San Antonio is aiming on becoming the 6th largest city by 2021.
+            There was an increase in construction industry by 5.1%; making it the greatest increase in 
+            job growth.
+
+          </p>
           <p><a class="btn btn-secondary" href="#" role="button">View details »</a></p>
         </div><!-- /.col-lg-3 -->
 
