--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
           <h2>San Antonio</h2>
           <p>Job growth for San Antonio has dropped to 1.4% from last year, in comparison to 2.0% from
             the previous year. However, San Antonio is aiming on becoming the 6th largest city by 2021.
-            There was an increase in construction industry by 5.1%; making it the greatest increase in 
+            There was an increase in construction industry by 5.1%; making it the greatest increase in
             job growth.
 
           </p>
@@ -97,6 +97,7 @@
       <!-- Section for Leaflet maps and d3 maps -->
       <div class="row featurette">
         <div class="col-md-5">
+          <!-- map explanation -->
           <h2 class="featurette-heading">Labor Color Map </h2>
           <p class="lead">The color based map represents the 25 metropolitan
             regions within the state of Texas. In addition, there are 6 rural
@@ -107,10 +108,24 @@
         </div>
         <!-- leaflet map -->
         <div class="col-md-7" id="map"></div>
-        <!-- API key -->
         <script type="text/javascript" src="config.js"></script>
         <script type="text/javascript" src="logic.js"></script>
       </div>
+
+       <!-- Section for Leaflet maps and d3 maps -->
+       <div class="row featurette">
+          <!-- leaflet map -->
+        <div class="col-md-7" id="map2"></div>
+        <script type="text/javascript" src="config_Proj2.js"></script>
+        <script type="text/javascript" src="logic_Proj2.js"></script>
+        <!-- map explanation -->
+        <div class="col-md-5">
+          <h2 class="featurette-heading">Labor Statistics Map </h2>
+          <p class="lead">The labor statistics map illustrates the prominent 
+            occupations within the 31 regions within in Texas. 
+          </p>
+        </div>
+       
     </div>
 
 
