--- a/index.html
+++ b/index.html
@@ -111,13 +111,15 @@
         <script type="text/javascript" src="config.js"></script>
         <script type="text/javascript" src="logic.js"></script>
       </div>
+      <br>
+      <br>
 
        <!-- Section for Leaflet maps and d3 maps -->
        <div class="row featurette">
           <!-- leaflet map -->
         <div class="col-md-7" id="map2"></div>
         <script type="text/javascript" src="config_Proj2.js"></script>
-        <script type="text/javascript" src="logic_Proj2.js"></script>
+        <script type="text/javascript" src="logic_Proj2.1.js"></script>
         <!-- map explanation -->
         <div class="col-md-5">
           <h2 class="featurette-heading">Labor Statistics Map </h2>
@@ -125,14 +127,30 @@
             occupations within the 31 regions within in Texas. 
           </p>
         </div>
-       
+       <br>
+       <br>
+        <!-- Section for Chart.js -->
+      <div class="row featurette">
+          <div class="col-md-7">
+            <!-- map explanation -->
+            <h2 class="featurette-heading"> Statewide Unemployment Chart </h2>
+            <p class="lead">This map represents the changes in the employment for 2018.
+            </p>
+          </div>
+          <!-- CDN for Chart.js -->
+          <!-- <script scr= "https://cdn.jsdelivr.net/npm/chart.js@2.8.0/dist/Chart.min.js"></script> -->
+          <script src="https://cdn.jsdelivr.net/npm/chart.js@2.8.0/dist/Chart.bundle.js" integrity="sha256-qSIshlknROr4J8GMHRlW3fGKrPki733tLq+qeMCR05Q=" crossorigin="anonymous"></script>
+          <!-- Chart.js -->
+          <canvas class="col-md-5" id="mixedChart"></canvas>
+          <script type="text/javascript" src="Chart.js"></script>
+        </div>
     </div>
 
 
     <!-- <script src="https://cdn.plot.ly/plotly-1.31.2.min.js"></script> -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/d3/5.5.0/d3.js"></script>
     <script src="https://cdn.plot.ly/plotly-latest.min.js"></script>
-    <!-- <script src="choropleth.js"></script> -->
+    
 
 </body>
 
