--- a/index_Proj2.html
+++ b/index_Proj2.html
@@ -14,7 +14,7 @@
     crossorigin=""></script>
 
   <!-- Our CSS -->
-  <link rel="stylesheet" type="text/css" href="style.css">
+  <link rel="stylesheet" type="text/css" href="style_Proj2.css">
 </head>
 
 <body>
@@ -24,7 +24,7 @@
   <!-- API key -->
   <script type="text/javascript" src="config.js"></script>
   <!-- Our JS -->
-  <script type="text/javascript" src="logic.js"></script>
+  <script type="text/javascript" src="logic_Proj2.1.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/d3/5.5.0/d3.min.js"></script>
   <script src="https://cdn.plot.ly/plotly-latest.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/d3-tip/0.9.1/d3-tip.js"></script>
