updates to html

--- a/index.html
+++ b/index.html
@@ -131,9 +131,9 @@
        <br>
         <!-- Section for Chart.js -->
       <div class="row featurette">
-          <div class="col-md-7">
+          <div class="col-md-12">
             <!-- map explanation -->
-            <h2 class="featurette-heading"> Statewide Unemployment Chart </h2>
+            <h2 class="featurette-heading"> Statewide Employment Chart </h2>
             <p class="lead">This map represents the changes in the employment for 2018.
             </p>
           </div>
@@ -141,7 +141,7 @@
           <!-- <script scr= "https://cdn.jsdelivr.net/npm/chart.js@2.8.0/dist/Chart.min.js"></script> -->
           <script src="https://cdn.jsdelivr.net/npm/chart.js@2.8.0/dist/Chart.bundle.js" integrity="sha256-qSIshlknROr4J8GMHRlW3fGKrPki733tLq+qeMCR05Q=" crossorigin="anonymous"></script>
           <!-- Chart.js -->
-          <canvas class="col-md-5" id="mixedChart"></canvas>
+          <canvas class="col-md-12" id="mixedChart"></canvas>
           <script type="text/javascript" src="Chart.js"></script>
         </div>
     </div>
